--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
             <a class="navbar-brand me-auto" href="#home"></a>
-                <img src="../img/logo_CommUnity.png" alt="CommUnity Logo" class="logo-img">
+                <img src="/img/logo_CommUnity.png" alt="CommUnity Logo" class="logo-img">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -50,8 +50,8 @@
                     <h1 class="hero-title">CommUnity: Informa, Crea y Avisa.</h1>
                     <p class="hero-subtitle">Informarse es la llave para el bienestar social y comunitario.</p>
                     <div class="d-flex gap-3 justify-content-center justify-content-lg-start flex-wrap">
-                        <button class="btn btn-hero" onclick="window.location.href='src/auth/Register/Registrar.html'">Regístrate</button>
-                        <button class="btn btn-inicio" onclick="window.location.href='src/auth/login/Login.html'">Iniciar Sesión</button>
+                        <button class="btn btn-hero" onclick="window.location.href='/src/auth/Register/Registrar.html'">Regístrate</button>
+                        <button class="btn btn-inicio" onclick="window.location.href='/src/auth/login/Login.html'">Iniciar Sesión</button>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <p class="features-text fw-semibold">¡Juntos, hacemos de nuestro barrio un lugar más seguro y conectado!</p>
                 </div>
                 <div class="col-lg-6 order-lg-1 text-center mb-4 mb-lg-0">
-                    <img src="./img/img_2.jpg" alt="Ilustración de CommUnity" class="features-img">
+                    <img src="/img/img_2.jpg" alt="Ilustración de CommUnity" class="features-img">
                 </div>
             </div>
         </div>
