Arrelo de rutas

--- a/src/auth/login/Login.html
+++ b/src/auth/login/Login.html
@@ -19,7 +19,7 @@
             <div class="form-container">
                 <!-- Logo -->
                 <div class="logo">
-                    <img src="../../../img/logo_CommUnity.png" alt="Logo de Community" class="logo-image">
+                    <img src="/img/logo_CommUnity.png" alt="Logo de Community" class="logo-image">
                 </div>
                 
                 <!-- Cabecera -->
