--- a/src/features/Reportes/reportes.html
+++ b/src/features/Reportes/reportes.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../Shared/style/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -130,16 +129,33 @@
         <div class="panel-header">
             <h3>Avisos para la comunidad</h3><button class="close-panel-btn" id="close-notices-btn">&times;</button>
         </div>
-        <nav class="panel-tabs"><button class="tab-button active">Todos</button><button class="tab-button">Actuales</button><button class="tab-button">Pasados</button></nav>
+        <nav class="panel-tabs"><button class="tab-button active">Todos</button>
+            <button class="tab-button">Actuales</button>
+            <button class="tab-button">Pasados</button></nav>
         <div class="notices-list">
             <article class="notice-item">
-                <div class="notice-title"><h4><i class="fa-solid fa-user-shield"></i> Administrador 1</h4><a href="#"><i class="fa-solid fa-chevron-right"></i></a></div><h5>Mantenimiento de alumbrado</h5><p>Se realizará mantenimiento preventivo a todos los postes de la calle Zafiro este sábado 8 de Junio... <a href="#">Leer más</a></p><time>8 de jun 2025</time>
+                <div class="notice-title">
+                    <h4><i class="fa-solid fa-user-shield">
+                    </i> Administrador 1</h4><a href="#">
+                    <i class="fa-solid fa-chevron-right"></i></a>
+                </div><h5>Mantenimiento de alumbrado</h5>
+                <p>Se realizará mantenimiento preventivo a todos los postes de la calle Zafiro este sábado 8 de Junio... <a href="#">Leer más</a>
+                </p><time>8 de jun 2025</time>
             </article>
             <article class="notice-item">
-                <div class="notice-title"><h4><i class="fa-solid fa-user-shield"></i> Administrador 2</h4><a href="#"><i class="fa-solid fa-chevron-right"></i></a></div><h5>Corte de agua programado</h5><p>La compañia de agua realizará trabajos de mantenimiento que afectarán el suministro... <a href="#">Leer más</a></p><time>9 de jun 2025</time>
+                <div class="notice-title"><h4>
+                    <i class="fa-solid fa-user-shield"></i> Administrador 2</h4>
+                    <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
+                </div><h5>Corte de agua programado</h5>
+                <p>La compañia de agua realizará trabajos de mantenimiento que afectarán el suministro... <a href="#">Leer más</a>
+                </p><time>9 de jun 2025</time>
             </article>
              <article class="notice-item">
-                <div class="notice-title"><h4><i class="fa-solid fa-user-shield"></i> Protección Civil</h4><a href="#"><i class="fa-solid fa-chevron-right"></i></a></div><h5>Campaña de vacunación</h5><p>Jornada de vacunación contra la influenza en el parque central, no faltes... <a href="#">Leer más</a></p><time>10 de jun 2025</time>
+                <div class="notice-title"><h4>
+                 <i class="fa-solid fa-user-shield"></i> Protección Civil</h4>
+                 <a href="#"><i class="fa-solid fa-chevron-right"></i></a></div>
+                 <h5>Campaña de vacunación</h5><p>Jornada de vacunación contra la influenza en el parque central, no faltes... <a href="#">Leer más</a>
+                </p><time>10 de jun 2025</time>
             </article>
         </div>
     </aside>
