--- a/src/features/Reportes/reportes.html
+++ b/src/features/Reportes/reportes.html
@@ -129,9 +129,11 @@
         <div class="panel-header">
             <h3>Avisos para la comunidad</h3><button class="close-panel-btn" id="close-notices-btn">&times;</button>
         </div>
-        <nav class="panel-tabs"><button class="tab-button active">Todos</button>
+        <nav class="panel-tabs">
+            <button class="tab-button active">Todos</button>
             <button class="tab-button">Actuales</button>
-            <button class="tab-button">Pasados</button></nav>
+            <button class="tab-button">Pasados</button>
+        </nav>
         <div class="notices-list">
             <article class="notice-item">
                 <div class="notice-title">
